fix: overflow hidden

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     color: var(--light-color);
+    overflow: hidden;
 }
 
 header {
